Fix instance preview alignment

--- a/src/scripts/components/h5peditor-portfolio-placeholder-layout-button.scss
+++ b/src/scripts/components/h5peditor-portfolio-placeholder-layout-button.scss
@@ -103,6 +103,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          text-align: center;
         }
       }
     }
